<resources>
    <string name="app_name">Z录</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">song.zhu@lasong.com.cn</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">首页</string>
    <string name="menu_video">视频</string>
    <string name="menu_gallery">图库</string>
    <string name="menu_about">关于</string>
    <string name="home_record_screen_title">屏幕录制</string>
    <string name="home_record_screen_subtitle">免Root实现超清录屏\n请注意保护隐私安全</string>
    <string name="home_record_camera_title">相机录制</string>
    <string name="home_record_camera_subtitle">平凡的世界\n在我的双眼下将变得不再平凡</string>
    <string name="record_video_direction">方向</string>
    <string name="record_video_resolution">分辨率</string>
    <string name="record_video_clip_mode">裁剪</string>
    <string name="record_bitrate">码率</string>
    <string name="record_bitrate_hint">码率与录制视频的质量以及文件大小成正比</string>
    <string name="record_video_fps">帧率</string>
    <string name="record_sample_rate">采样率</string>
    <string name="record_channel">声道</string>
    <string name="record_label_store">视频存储</string>
    <string name="record_store_free">可用空间</string>
    <string name="record_label_video_params">视频参数</string>
    <string name="record_video_resolution_default">手机分辨率</string>
    <string name="record_video_clip_default">居中填充</string>
    <string name="record_label_audio_params">音频参数</string>
    <string name="record_channel_default">单声道</string>
    <string name="record_label_audio_enable">是否开启录音</string>
    <string name="record_delay">录制倒计时</string>
    <string name="record_label_other_params">其他</string>
    <string name="notification_record_screen_name">屏幕录制</string>
    <string name="notification_record_description">用于录制视频功能</string>
    <string name="notification_text_content">正在录制视频, 点击打开应用</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="title_default">提醒</string>
    <string name="record_confirm_content_recording">当前正在录制中, 确认关闭本次录制?</string>
    <string name="record_permission_audio_not_grant">获取录音权限失败, 请先开启麦克风权限</string>
    <string name="record_permission_write_external_not_grant">获取写入文件权限失败, 请先开启文件权限</string>
    <string name="record_permission_dialog_ok">开启</string>
    <string name="muxer_stop_fail">视频生成失败!</string>
    <string name="video_delete_tip_content">是否删除本地视频文件 %s \n\n 删除后无法恢复！</string>
    <string name="video_edit_title_hint">请输入标题~</string>
    <string name="video_edit_title_empty">标题不能为空, 请输入方便记忆的标题~</string>
    <string name="video_send_to">分享视频给</string>
    <string name="about_version_name">版本号: %s</string>
    <string name="valid_client_fail_content">验证客户端失败\n请安装正规渠道客户端</string>
    <string name="valid_client_fail_quit">退出</string>
    <string name="title_update_version">版本更新</string>
    <string name="update_version_ok">立即更新</string>
    <string name="update_version_cancel">稍后再说</string>
    <string name="video_clip_title">视频剪辑</string>
</resources>