<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_record_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/HomeItemStyle"
        app:cardCornerRadius="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_home_item"
            android:orientation="horizontal"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@android:color/darker_gray"
                app:cardElevation="0dp"
                >

                <ImageView
                    android:id="@+id/iv_screen_shot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/iv_shot_placeholder"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_movie"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="visible"
                    />

                <ImageView
                    android:id="@+id/iv_recording"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="left|bottom"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="130dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/home_record_screen_title"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/title_text_size"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/home_record_screen_subtitle"
                    android:textColor="@color/textSecondary"
                    android:textSize="@dimen/caption_text_size"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_record_camera"
        app:layout_constraintTop_toBottomOf="@id/card_record_screen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardCornerRadius="8dp"
        style="@style/HomeItemStyle"
        android:visibility="gone"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_home_item"
            >

            <ImageView
                android:id="@+id/iv_record_camera"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_home_record_camera"
                android:padding="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                />

            <TextView
                android:id="@+id/tv_camera_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:layout_toRightOf="@id/iv_record_camera"
                android:layout_marginTop="40dp"
                android:text="@string/home_record_camera_title"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:layout_toRightOf="@id/iv_record_camera"
                android:layout_below="@id/tv_camera_title"
                android:text="@string/home_record_camera_subtitle"
                android:textColor="#80FFFFFF"
                android:textSize="14sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>